# email-rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  msi-debug-status.md  status.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
.woodpecker/: linux-release.yml  windows-release.yml
.woodpecker/windows/: harvest-static.py  (+5 more)
crates/email-server/: Cargo.toml  build.rs
crates/email-server/src/: config.rs  error.rs  main.rs  state.rs
crates/email-server/src/api/: accounts.rs  auth.rs  calendar.rs  compose.rs  events.rs  folders.rs  labels.rs  messages.rs  mod.rs  rules.rs  search.rs  smart_folders.rs  snooze.rs  webhooks.rs
crates/email-server/src/auth/: mod.rs  oauth2.rs
crates/email-server/src/calendar/: mod.rs  sync.rs
crates/email-server/src/db/: mod.rs
crates/email-server/src/db/migrations/: 001_initial.sql  002_token_expiry.sql  003_settings.sql  004_webhooks.sql  006_password.sql  007_calendar_links.sql  008_snooze.sql  009_rules.sql  010_labels.sql  011_accounts_unique.sql
crates/email-server/src/imap/: sync.rs
crates/email-server/src/providers/: caldav.rs  generic_imap.rs  gmail.rs  google_calendar.rs  mod.rs
crates/email-server/src/rules/: mod.rs
crates/email-server/src/smtp/: mod.rs
crates/email-server/src/sync/: mod.rs
crates/email-server/static/: index.html
crates/email-server/static/assets/: index-BG3HXkSf.css  index-BuZux0kE.css  index-CvJspDy5.js  index-D37Hmwlm.css  index-DWo0jnF_.css  index-DvHVT-iF.js  index-W4zI2wip.js  index-WbmiecJH.css  index-madIKw1P.js
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
mobile/: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+66 files in other folders)
