[package]
name = "email-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "email-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "hostname", "mime03", "tracing"] }
mail-parser = "0.9"
oauth2 = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std", "logging"] }
webpki-roots = "0.26"
base64 = "0.22"
urlencoding = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
hmac-sha256 = "1"
dotenvy = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"
tao = "0.30"
wry = "0.47"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
